---
source: crates/service/tests/code_action/if_br_to_br_if.rs
expression: response
---
[
  {
    "title": "Convert `if` with `br` to `br_if`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 4
              },
              "end": {
                "line": 7,
                "character": 16
              }
            },
            "newText": "(br_if 0 (i32.const 0) (i32.const 1))"
          }
        ]
      }
    }
  }
]
